--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,10 @@
 
   <div class="generalinfo">
     <h1>${data.character.name}</h1>
+    <div style="position:fixed;top:0;right:0;margin:0 10px;">
+      <button click.delegate="data.save()">Save</button>
+      <button click.delegate="data.load()">Load</button>
+    </div>
   </div>
 
   <div class="content">
