improvizations to character edit mode. added normalize.css

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,8 @@
 <template>
   <!--require from="bootstrap/css/bootstrap.css"></require-->
+  <require from="./normalize.css"></require>
   <require from="./styles.css"></require>
+  <require from="./resources/fonts/font-awesome.min.css"></require>
 
   <nav class="navbar" role="navigation">
     <div class="navbar-placeholder"></div>
