--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 
   <div class="generalinfo">
     <h1>${data.character.name}</h1>
-    <div style="position:fixed;top:0;right:0;margin:0 10px;">
+    <div class="saveAndLoadButtons">
       <button click.delegate="data.save()">Save</button>
       <input type="file" ref="fileinput" change.delegate="data.loadFile(fileinput)" style="display:none;" />
       <button click.delegate="data.load(fileinput)">Load</button>
